family images added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <style>
       .google-maps {
         position: relative;
-        padding-bottom: 75%; // This is the aspect ratio
+        padding-bottom: 75%;   /*This is the aspect ratio */ 
         height: 0;
         overflow: hidden;
       }
@@ -413,7 +413,7 @@
               data-aos="zoom-in-down"
               data-aos-duration="1000"
             >
-              Groomsmen & Bridesmaids
+              Groomsfamliy & Bridesmaidsfamliy
             </h2>
             <div
               class="carousel slide"
@@ -437,13 +437,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom-men-1.jpg"
+                          src="images/groom's-parents.JPG"
                           alt="Groom Men 1"
                         />
                         <div class="card-body text-center">
-                          <div class="h5">Bryan Berry</div>
-                          <p class="mb-0 text-muted">Best Friend</p>
-                          <p class="text-muted">Groomsmen</p>
+                          <div class="h5">Groom's Parents</div>
+                          <p class="mb-0 text-muted">Lakshmi</p>
+                          <p class="text-muted">Naganayaka</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -474,13 +474,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom-men-2.jpg"
+                          src="images/groom's-sis1.jpg"
                           alt="Groom Men 2"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Kevin Johnston</div>
-                          <p class="mb-0 text-muted">Room Mate</p>
-                          <p class="text-muted">Groomsmen</p>
+                          <div class="h5 text-center">Savithri</div>
+                          <!-- <p class="mb-0 text-muted">Room Mate</p> -->
+                          <p class="text-muted">Groom's Sister</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -511,13 +511,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom-men-3.jpg"
+                          src="images/groom's-sis2.jpg"
                           alt="Groom Men 3"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Arthur Wright</div>
-                          <p class="mb-0 text-muted">Friend</p>
-                          <p class="text-muted">Groomsmen</p>
+                          <div class="h5 text-center">Putty</div>
+                          <!-- <p class="mb-0 text-muted">Friend</p> -->
+                          <p class="text-muted">Groom's Sister</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -552,13 +552,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride-maid-1.jpg"
+                          src="images/bride's-parents.JPG"
                           alt="Bride Maid 1"
                         />
                         <div class="card-body text-center">
-                          <div class="h5">Rachel Lawson</div>
-                          <p class="mb-0 text-muted">Best Friend</p>
-                          <p class="text-muted">Bridesmaids</p>
+                          <div class="h5">Bride's Parents</div>
+                          <p class="mb-0 text-muted">Malathi</p>
+                          <p class="text-muted ">Biligiriranganayaka</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -589,13 +589,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride-maid-2.jpg"
+                          src="images/bride's-brother.jpg"
                           alt="Bride Maid 2"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Betty George</div>
-                          <p class="mb-0 text-muted">Room Mate</p>
-                          <p class="text-muted">Bridesmaids</p>
+                          <div class="h5 text-center">Santhosh</div>
+                          <!-- <p class="mb-0 text-muted">Room Mate</p> -->
+                          <p class="text-muted">Bride's Brother</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
