--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
               data-aos="zoom-in-down"
               data-aos-duration="1000"
             >
-              Groomsfamliy & Bridesmaidsfamliy
+              Groom's Famliy & Bride's Famliy
             </h2>
             <div
               class="carousel slide"
