--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         right:20px;
         padding: auto;
       }
+      .vedio iframe {
+        top: 0;
+        left: 0;
+        width: 100% !important;
+      }
     </style>
     <noscript>
       <style type="text/css">
@@ -437,13 +442,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-parents.JPG"
+                          src="images/groom's-father.jpg"
                           alt="Groom Men 1"
                         />
                         <div class="card-body text-center">
-                          <div class="h5">Groom's Parents</div>
-                          <p class="mb-0 text-muted">Lakshmi</p>
-                          <p class="text-muted">Naganayaka</p>
+                          <div class="h5">Naganayaka</div>
+                          <!-- <p class="mb-0 text-muted">Lakshmi</p> -->
+                          <p class="text-muted">Groom's Father</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -474,13 +479,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-sis1.jpg"
+                          src="images/groom's-mom.jpg"
                           alt="Groom Men 2"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Savithri</div>
+                          <div class="h5 text-center">Lakshmi</div>
                           <!-- <p class="mb-0 text-muted">Room Mate</p> -->
-                          <p class="text-muted">Groom's Sister</p>
+                          <p class="text-muted">Groom's Mother</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -511,13 +516,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-sis2.jpg"
+                          src="images/groom's-sisters.jpg"
                           alt="Groom Men 3"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Putty</div>
-                          <!-- <p class="mb-0 text-muted">Friend</p> -->
-                          <p class="text-muted">Groom's Sister</p>
+                          <div class="h5 text-center">Savithri</div>
+                          <p class="mb-0 text-muted"></p>
+                          <p class="text-muted">Groom's Sisters</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -552,13 +557,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride's-parents.JPG"
+                          src="images/bride's-father.jpg"
                           alt="Bride Maid 1"
                         />
                         <div class="card-body text-center">
-                          <div class="h5">Bride's Parents</div>
-                          <p class="mb-0 text-muted">Malathi</p>
-                          <p class="text-muted ">Biligiriranganayaka</p>
+                          <div class="h5">Biligiriranganayaka</div>
+                          <!-- <p class="mb-0 text-muted">Malathi</p> -->
+                          <p class="text-muted ">Bride's Father</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -589,13 +594,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride's-brother.jpg"
+                          src="images/bride's-mom.jpg"
                           alt="Bride Maid 2"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Santhosh</div>
+                          <div class="h5 text-center">Malathi</div>
                           <!-- <p class="mb-0 text-muted">Room Mate</p> -->
-                          <p class="text-muted">Bride's Brother</p>
+                          <p class="text-muted">Bride's Mother</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -626,13 +631,13 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride-maid-3.jpg"
+                          src="images/bride's-bro.jpg"
                           alt="Bride Maid 3"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Emma Snyder</div>
-                          <p class="mb-0 text-muted">Friend</p>
-                          <p class="text-muted">Bridesmaids</p>
+                          <div class="h5 text-center">Santhosh</div>
+                          <!-- <p class="mb-0 text-muted">Friend</p> -->
+                          <p class="text-muted">Bride's Brother</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
                               ><i
@@ -665,6 +670,38 @@
             </div>
           </div>
         </div>
+
+        <div class="ww-section"  id="vedio">
+          <div class="container ww-wedding-vedio">
+            <h2
+              class="h1 text-center pt-3 ww-title"
+              data-aos="zoom-in-down"
+              data-aos-duration="1000"
+            >
+            Pre-Wedding Vedio
+            </h2>
+          </div>
+            <div class="col-md-30 text-center">
+             <video src="images/pre-vedio.mp4" controls height="300" width="800" >Loading…</video>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="ww-section ww-category-filter mb-5" id="vedio">
+          <div class="container">
+            <h2
+            class="h1 text-center pb-3 ww-title"
+            data-aos="zoom-in-down"
+            data-aos-duration="1000"
+          >
+            Pre-Wedding Vedio
+          </h2>
+          <div class="col-md-30 text-center ">
+            <iframe src="images/pre-vedio.mp4">Loading…</iframe>
+          </div>
+          </div>
+        </div> -->
+
         <div class="ww-section bg-light" id="gallery">
           <div class="ww-photo-gallery">
             <div class="container">
@@ -808,6 +845,8 @@
             </div>
           </div>
         </div>
+
+        
         
         <div class="ww-section" id="timer">
           <div class="container">
@@ -822,7 +861,6 @@
                   <a href="https://logwork.com/countdown-42yy" class="countdown-timer" data-timezone="Asia/Kolkata" data-date="2024-05-20 00:00">Revanna & Pushpa</a>
               </div>
           </div>
-
         </div>
         <div class="ww-section ww-rsvp-detail text-white" id="contact-us">
           <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
