photo gallery updated

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               data-aos="zoom-in-down"
               data-aos-duration="1000"
             >
-              Groom's Famliy & Bride's Famliy
+              Groom's Family & Bride's Family
             </h2>
             <div
               class="carousel slide"
@@ -687,21 +687,6 @@
           </div>
         </div>
 
-        <!-- <div class="ww-section ww-category-filter mb-5" id="vedio">
-          <div class="container">
-            <h2
-            class="h1 text-center pb-3 ww-title"
-            data-aos="zoom-in-down"
-            data-aos-duration="1000"
-          >
-            Pre-Wedding Vedio
-          </h2>
-          <div class="col-md-30 text-center ">
-            <iframe src="images/pre-vedio.mp4">Loading…</iframe>
-          </div>
-          </div>
-        </div> -->
-
         <div class="ww-section bg-light" id="gallery">
           <div class="ww-photo-gallery">
             <div class="container">
@@ -738,6 +723,12 @@
                   href="#"
                   data-filter="wedding"
                   >Wedding</a
+                >
+                <a
+                  class="btn btn-outline-primary ww-filter-button"
+                  href="#"
+                  data-filter="family"
+                  >Family</a
                 >
               </div>
               <div
@@ -804,8 +795,7 @@
                         alt="Gallery Pic 5"
                     /></a>
                   </div>
-                  <div
-                    class="card"
+                  <div class="card"
                     data-groups='["wedding","ceremony","party"]'
                   >
                     <a
@@ -839,6 +829,34 @@
                         src="images/gallery-pic-8.jpg"
                         alt="Gallery Pic 8"
                     /></a>
+                  </div>
+                  <div class="card"
+                    data-groups='["family"]'
+                  >
+                    <a
+                      href="images/bride's-parents.JPG"
+                      data-toggle="lightbox"
+                      data-gallery="ww-gallery"
+                      ><img
+                        class="img-fluid"
+                        src="images/bride's-parents.JPG"
+                        alt="Gallery Pic 9"
+                    />
+                    </a>
+                  </div>
+                  <div class="card"
+                    data-groups='["family"]'
+                  >
+                    <a
+                      href="images/groom's-parents.JPG"
+                      data-toggle="lightbox"
+                      data-gallery="ww-gallery"
+                      ><img
+                        class="img-fluid"
+                        src="images/groom's-parents.JPG"
+                        alt="Gallery Pic 10"
+                    />
+                    </a>
                   </div>
                 </div>
               </div>
