pre-wedding page added

--- a/index.html
+++ b/index.html
@@ -671,21 +671,21 @@
           </div>
         </div>
 
-        <div class="ww-section"  id="vedio">
-          <div class="container ww-wedding-vedio">
+        <!-- <div class="ww-section"  id="video">
+          <div class="container ww-wedding-video">
             <h2
               class="h1 text-center pt-3 ww-title"
               data-aos="zoom-in-down"
               data-aos-duration="1000"
             >
-            Pre-Wedding Vedio
+            Pre-Wedding Video
             </h2>
           </div>
             <div class="col-md-30 text-center">
              <video src="images/pre-vedio.mp4" controls height="300" width="800" >Loading…</video>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="ww-section bg-light" id="gallery">
           <div class="ww-photo-gallery">
@@ -730,6 +730,13 @@
                   data-filter="family"
                   >Family</a
                 >
+                <a
+                  class="btn btn-outline-primary "
+                  href="/pre-wedding.html" target="_blank"
+                  data-filter="pre-wedding"
+                  >Pre-wedding</a
+                >
+
               </div>
               <div
                 class="ww-gallery"
