photo gallery second update

--- a/index.html
+++ b/index.html
@@ -841,13 +841,13 @@
                     data-groups='["family"]'
                   >
                     <a
-                      href="images/bride's-parents.JPG"
+                      href="images/gallery-pic-25.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/bride's-parents.JPG"
-                        alt="Gallery Pic 9"
+                        src="images/gallery-pic-25.jpg"
+                        alt="Gallery Pic 25"
                     />
                     </a>
                   </div>
@@ -855,16 +855,58 @@
                     data-groups='["family"]'
                   >
                     <a
-                      href="images/groom's-parents.JPG"
+                      href="images/gallery-pic-26.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/groom's-parents.JPG"
-                        alt="Gallery Pic 10"
+                        src="images/gallery-pic-26.jpg"
+                        alt="Gallery Pic 26"
                     />
                     </a>
                   </div>
+                  <div class="card"
+                  data-groups='["family"]'
+                >
+                  <a
+                    href="images/gallery-pic-27.jpg"
+                    data-toggle="lightbox"
+                    data-gallery="ww-gallery"
+                    ><img
+                      class="img-fluid"
+                      src="images/gallery-pic-27.jpg"
+                      alt="Gallery Pic 27"
+                  />
+                  </a>
+                </div>
+                <div class="card"
+                data-groups='["family"]'
+              >
+                <a
+                  href="images/gallery-pic-28.jpg"
+                  data-toggle="lightbox"
+                  data-gallery="ww-gallery"
+                  ><img
+                    class="img-fluid"
+                    src="images/gallery-pic-28.jpg"
+                    alt="Gallery Pic 28"
+                />
+                </a>
+              </div>
+              <div class="card"
+              data-groups='["family"]'
+            >
+              <a
+                href="images/gallery-pic-29.jpg"
+                data-toggle="lightbox"
+                data-gallery="ww-gallery"
+                ><img
+                  class="img-fluid"
+                  src="images/gallery-pic-29.jpg"
+                  alt="Gallery Pic 29"
+              />
+              </a>
+            </div>
                 </div>
               </div>
             </div>
