button style changed

--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
                   <h3 class="h2 ww-title">Revanna</h3>
                   <div class="ww-social-links">
                     <span>Send me your wishes on</span>
-                    <a class="btn btn-primary" href="#"
-                      ><i class="fab fa-instagram" aria-hidden="true"></i
+                    <a class="btn btn-outline-primary" href="#"
+                      ><i class="fab fa-instagram " aria-hidden="true"></i
                     ></a>
                     <a
-                      class="btn btn-success"
+                      class="btn btn-outline-success"
                       style="text-decoration: none"
                       target="_blank"
                       href="https://api.whatsapp.com/send?phone=918722637226"
@@ -282,11 +282,11 @@
                   <h3 class="h2 ww-title">Pushpa</h3>
                   <div class="ww-social-links">
                     <span>Send me your wishes on</span>
-                    <a class="btn btn-primary" href="#"
+                    <a class="btn btn-outline-primary" href="#"
                       ><i class="fab fa-instagram" aria-hidden="true"></i
                     ></a>
                     <a
-                      class="btn btn-success"
+                      class="btn btn-outline-success"
                       style="text-decoration: none"
                       target="_blank"
                       href="https://api.whatsapp.com/send?phone=918550066269"
@@ -950,8 +950,8 @@
               </p>
               <h3 style="text-decoration: underline;">Call us for any queries</h3>
               <div>
-                Revanna : <a class="btn btn-primary" href="tel:+918722637226"><i class="fa fa-phone-square" aria-hidden="true"></i> Call</a>&nbsp;<a
-                class="btn btn-success"
+                Revanna : <a class="btn btn-outline-primary" href="tel:+918722637226"><i class="fa fa-phone-square" aria-hidden="true"></i> Call</a>&nbsp;<a
+                class="btn btn-outline-success"
                 style="text-decoration: none"
                 target="_blank"
                 href="https://api.whatsapp.com/send?phone=918722637226"
@@ -960,9 +960,9 @@
               > Chat</a> 
               </div>
               <div style="margin-top: 5px;">
-                Santhu (Bride's Brother) : <a class="btn btn-primary" href="tel:+918550066269"><i class="fa fa-phone-square" aria-hidden="true"></i> Call</a>
+                Santhu (Bride's Brother) : <a class="btn btn-outline-primary" href="tel:+918550066269"><i class="fa fa-phone-square" aria-hidden="true"></i> Call</a>
                 <a
-                class="btn btn-success"
+                class="btn btn-outline-success"
                 style="text-decoration: none"
                 target="_blank"
                 href="https://api.whatsapp.com/send?phone=918550066269"
