button style second update

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
               <p style="text-shadow: 2px; font-size: large;">Dear All,<br>
                 We cordially invite you to join us on the most special day of our lives, our wedding day! <br>
                 <i class="far fa-calendar-alt" aria-hidden="true"></i> : 20th May 2024 at 09:00 am,<br>
-                <i class="fas fa-map-marker-alt" aria-hidden="true"></i> : <a class="btn btn-outline-secondary" href="https://maps.app.goo.gl/GjKLXHubkRhDJXhX9" style="text-decoration: none;" target="_blank" rel="noopener noreferrer">Chowdeshwari Kalyana Mantapa, Kollegala.</a> <br>
+                <i class="fas fa-map-marker-alt" aria-hidden="true"></i> : <a class="btn btn-secondary" href="https://maps.app.goo.gl/GjKLXHubkRhDJXhX9" style="text-decoration: none;" target="_blank" rel="noopener noreferrer">Chowdeshwari Kalyana Mantapa, Kollegala.</a> <br>
                 We can't wait to celebrate this joyous occasion with our cherished friends and family. <br>
                 Your presence will mean the world to us as we embark on this beautiful journey together. <br>
                 Thank you All, <br>
