photo gallery button updated

--- a/index.html
+++ b/index.html
@@ -711,32 +711,25 @@
                 ><a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="party"
-                  >Party</a
+                  data-filter="Engagement"
+                  >Engagement</a
+                ><a
+                  class="btn btn-outline-primary ww-filter-button"
+                  href="pre-wedding.html"  
+                  data-filter="Pre-Wedding"
+                  >Pre-Wedding</a
                 ><a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="ceremony"
-                  >Ceremony</a
-                ><a
-                  class="btn btn-outline-primary ww-filter-button"
-                  href="#"
-                  data-filter="wedding"
-                  >Wedding</a
+                  data-filter="Bride Family"
+                  >Bride's Family</a
                 >
                 <a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="family"
-                  >Family</a
+                  data-filter="Groom Family"
+                  >Groom's Family</a
                 >
-                <a
-                  class="btn btn-outline-primary "
-                  href="/pre-wedding.html" target="_blank"
-                  data-filter="pre-wedding"
-                  >Pre-wedding</a
-                >
-
               </div>
               <div
                 class="ww-gallery"
@@ -747,166 +740,121 @@
                 data-aos-offset="0"
               >
                 <div class="card-columns">
-                  <div class="card" data-groups='["vacation","ceremony"]'>
+                  <div class="card" data-groups='["Engagement"]'>
                     <a
-                      href="images/gallery-pic-1.jpg"
+                      href="images/eng-pic-1.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-1.jpg"
+                        src="images/eng-pic-1.jpg"
                         alt="Gallery Pic 1"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["party","wedding"]'>
+                  <div class="card" data-groups='["Engagement"]'>
                     <a
-                      href="images/gallery-pic-2.jpg"
+                      href="images/eng-pic-2.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-2.jpg"
+                        src="images/eng-pic-2.jpg"
                         alt="Gallery Pic 2"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["vacation"]'>
+                  <div class="card" data-groups='["Engagement"]'>
                     <a
-                      href="images/gallery-pic-3.jpg"
+                      href="images/eng-pic-3.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-3.jpg"
+                        src="images/eng-pic-3.jpg"
                         alt="Gallery Pic 3"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["party","vacation"]'>
+                  <div class="card" data-groups='["Engagement"]'>
                     <a
-                      href="images/gallery-pic-4.jpg"
+                      href="images/eng-pic-4.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-4.jpg"
+                        src="images/eng-pic-4.jpg"
                         alt="Gallery Pic 4"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["vacation"]'>
+                  <div class="card" data-groups='["Engagement"]'>
                     <a
-                      href="images/gallery-pic-5.jpg"
+                      href="images/eng-pic-5.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-5.jpg"
+                        src="images/eng-pic-5.jpg"
                         alt="Gallery Pic 5"
                     /></a>
                   </div>
-                  <div class="card"
-                    data-groups='["wedding","ceremony","party"]'
+                  <div class="card" data-groups='["Bride Family"]'
                   >
                     <a
-                      href="images/gallery-pic-6.jpg"
+                      href="images/bride-fam-1.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-6.jpg"
+                        src="images/bride-fam-1.jpg"
                         alt="Gallery Pic 6"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["vacation"]'>
+                  <div class="card" data-groups='["Bride Family"]'>
                     <a
-                      href="images/gallery-pic-7.jpg"
+                      href="images/bride-fam-2.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-7.jpg"
+                        src="images/bride-fam-2.jpg"
                         alt="Gallery Pic 7"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["wedding","party"]'>
+                  <div class="card" data-groups='["Groom Family"]'>
                     <a
-                      href="images/gallery-pic-8.jpg"
+                      href="images/groom-fam-1.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-8.jpg"
+                        src="images/groom-fam-1.jpg"
                         alt="Gallery Pic 8"
                     /></a>
                   </div>
-                  <div class="card"
-                    data-groups='["family"]'
+                  <div class="card" data-groups='["Groom Family"]'
                   >
                     <a
-                      href="images/gallery-pic-25.jpg"
+                      href="images/groom-fam-2.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-25.jpg"
+                        src="images/groom-fam-2.jpg"
                         alt="Gallery Pic 25"
                     />
                     </a>
                   </div>
-                  <div class="card"
-                    data-groups='["family"]'
+                  <div class="card" data-groups='["Groom Family"]'
                   >
                     <a
-                      href="images/gallery-pic-26.jpg"
+                      href="images/groom-fam-3.jpg"
                       data-toggle="lightbox"
                       data-gallery="ww-gallery"
                       ><img
                         class="img-fluid"
-                        src="images/gallery-pic-26.jpg"
+                        src="images/groom-fam-3.jpg"
                         alt="Gallery Pic 26"
                     />
                     </a>
                   </div>
-                  <div class="card"
-                  data-groups='["family"]'
-                >
-                  <a
-                    href="images/gallery-pic-27.jpg"
-                    data-toggle="lightbox"
-                    data-gallery="ww-gallery"
-                    ><img
-                      class="img-fluid"
-                      src="images/gallery-pic-27.jpg"
-                      alt="Gallery Pic 27"
-                  />
-                  </a>
-                </div>
-                <div class="card"
-                data-groups='["family"]'
-              >
-                <a
-                  href="images/gallery-pic-28.jpg"
-                  data-toggle="lightbox"
-                  data-gallery="ww-gallery"
-                  ><img
-                    class="img-fluid"
-                    src="images/gallery-pic-28.jpg"
-                    alt="Gallery Pic 28"
-                />
-                </a>
-              </div>
-              <div class="card"
-              data-groups='["family"]'
-            >
-              <a
-                href="images/gallery-pic-29.jpg"
-                data-toggle="lightbox"
-                data-gallery="ww-gallery"
-                ><img
-                  class="img-fluid"
-                  src="images/gallery-pic-29.jpg"
-                  alt="Gallery Pic 29"
-              />
-              </a>
-            </div>
                 </div>
               </div>
             </div>
