pre-wedding button issue solved

--- a/index.html
+++ b/index.html
@@ -715,11 +715,6 @@
                   >Engagement</a
                 ><a
                   class="btn btn-outline-primary ww-filter-button"
-                  href="pre-wedding.html"  
-                  data-filter="Pre-Wedding"
-                  >Pre-Wedding</a
-                ><a
-                  class="btn btn-outline-primary ww-filter-button"
                   href="#"
                   data-filter="Bride Family"
                   >Bride's Family</a
@@ -729,6 +724,12 @@
                   href="#"
                   data-filter="Groom Family"
                   >Groom's Family</a
+                >
+                <a
+                  class="btn btn-outline-primary "
+                  href="pre-wedding.html"  
+                  data-filter="Pre-Wedding"
+                  >Pre-Wedding</a
                 >
               </div>
               <div
