--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="col-md-30 text-center">
-        <!-- <video src="images/pre-video.mp4" controls width="100%" height="600px" >Loading…</video> -->
-        <iframe width="853" height="480" src="https://www.youtube.com/embed/IhOR26WUAfc"  frameborder="0" ></iframe>
-        <!-- <video src="https://youtu.be/IhOR26WUAfc" controls width="600%" height="400px"></video>    -->
-     </div>
+    <video src="images\pre-video.mp4" controls width="400" height="300"></video>
 </body>
 </html>
