--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-father.jpg"
-                          alt="Groom Men 1"
+                          src="images/groom-father.jpg"
+                          alt="Groom Father"
                         />
                         <div class="card-body text-center">
                           <div class="h5">Naganayaka</div>
@@ -479,8 +479,8 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-mom.jpg"
-                          alt="Groom Men 2"
+                          src="images/groom-mom.jpg"
+                          alt="Groom Mother"
                         />
                         <div class="card-body text-center">
                           <div class="h5 text-center">Lakshmi</div>
@@ -516,12 +516,12 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/groom's-sisters.jpg"
+                          src="images/groom-sisters.jpg"
                           alt="Groom Men 3"
                         />
                         <div class="card-body text-center">
-                          <div class="h5 text-center">Savithri</div>
-                          <p class="mb-0 text-muted"></p>
+                          <div class="h5 text-center">Savithri & Putty</div>
+                          <!-- <p class="mb-0 text-muted">Putty</p> -->
                           <p class="text-muted">Groom's Sisters</p>
                           <div class="ww-social-links">
                             <a class="btn btn-link" href="#"
@@ -557,8 +557,8 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride's-father.jpg"
-                          alt="Bride Maid 1"
+                          src="images/bride-father.jpg"
+                          alt="Bride Father"
                         />
                         <div class="card-body text-center">
                           <div class="h5">Biligiriranganayaka</div>
@@ -594,8 +594,8 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride's-mom.jpg"
-                          alt="Bride Maid 2"
+                          src="images/bride-mom.jpg"
+                          alt="Bride Mother"
                         />
                         <div class="card-body text-center">
                           <div class="h5 text-center">Malathi</div>
@@ -631,8 +631,8 @@
                       <div class="card d-block mb-3">
                         <img
                           class="card-img-top"
-                          src="images/bride's-bro.jpg"
-                          alt="Bride Maid 3"
+                          src="images/bride-bro.jpg"
+                          alt="Bride Brother"
                         />
                         <div class="card-body text-center">
                           <div class="h5 text-center">Santhosh</div>
@@ -711,24 +711,24 @@
                 ><a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="Engagement"
+                  data-filter="engagement"
                   >Engagement</a
                 ><a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="Bride Family"
+                  data-filter="bride-family"
                   >Bride's Family</a
                 >
                 <a
                   class="btn btn-outline-primary ww-filter-button"
                   href="#"
-                  data-filter="Groom Family"
+                  data-filter="groom-family"
                   >Groom's Family</a
                 >
                 <a
                   class="btn btn-outline-primary "
                   href="pre-wedding.html"  
-                  data-filter="Pre-Wedding"
+                  data-filter="pre-wedding"
                   >Pre-Wedding</a
                 >
               </div>
@@ -741,7 +741,7 @@
                 data-aos-offset="0"
               >
                 <div class="card-columns">
-                  <div class="card" data-groups='["Engagement"]'>
+                  <div class="card" data-groups='["engagement"]'>
                     <a
                       href="images/eng-pic-1.jpg"
                       data-toggle="lightbox"
@@ -752,7 +752,7 @@
                         alt="Gallery Pic 1"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Engagement"]'>
+                  <div class="card" data-groups='["engagement"]'>
                     <a
                       href="images/eng-pic-2.jpg"
                       data-toggle="lightbox"
@@ -763,7 +763,7 @@
                         alt="Gallery Pic 2"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Engagement"]'>
+                  <div class="card" data-groups='["engagement"]'>
                     <a
                       href="images/eng-pic-3.jpg"
                       data-toggle="lightbox"
@@ -774,7 +774,7 @@
                         alt="Gallery Pic 3"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Engagement"]'>
+                  <div class="card" data-groups='["engagement"]'>
                     <a
                       href="images/eng-pic-4.jpg"
                       data-toggle="lightbox"
@@ -785,7 +785,7 @@
                         alt="Gallery Pic 4"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Engagement"]'>
+                  <div class="card" data-groups='["engagement"]'>
                     <a
                       href="images/eng-pic-5.jpg"
                       data-toggle="lightbox"
@@ -796,7 +796,7 @@
                         alt="Gallery Pic 5"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Bride Family"]'
+                  <div class="card" data-groups='["bride-family"]'
                   >
                     <a
                       href="images/bride-fam-1.jpg"
@@ -808,7 +808,7 @@
                         alt="Gallery Pic 6"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Bride Family"]'>
+                  <div class="card" data-groups='["bride-family"]'>
                     <a
                       href="images/bride-fam-2.jpg"
                       data-toggle="lightbox"
@@ -819,7 +819,7 @@
                         alt="Gallery Pic 7"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Groom Family"]'>
+                  <div class="card" data-groups='["groom-family"]'>
                     <a
                       href="images/groom-fam-1.jpg"
                       data-toggle="lightbox"
@@ -830,7 +830,7 @@
                         alt="Gallery Pic 8"
                     /></a>
                   </div>
-                  <div class="card" data-groups='["Groom Family"]'
+                  <div class="card" data-groups='["groom-family"]'
                   >
                     <a
                       href="images/groom-fam-2.jpg"
@@ -843,7 +843,7 @@
                     />
                     </a>
                   </div>
-                  <div class="card" data-groups='["Groom Family"]'
+                  <div class="card" data-groups='["groom-family"]'
                   >
                     <a
                       href="images/groom-fam-3.jpg"
